--- a/Next.js/my-test-nextjs/src/app/globals.css
+++ b/Next.js/my-test-nextjs/src/app/globals.css
@@ -24,3 +24,10 @@ body {
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
 }
+
+@import "leaflet/dist/leaflet.css";
+
+.leaflet-container {
+  height: 400px;
+  width: 100%;
+}
